fix unreadable CWs in dark mode (#190)

--- a/scss/_markup.scss
+++ b/scss/_markup.scss
@@ -170,7 +170,7 @@
 
   @include dark-mode {
     background-color: lighten($content-bg-dark, 5%);
-    color: #fff;
+    color: $gray-900;
   }
 
   font-size: 0.8rem;
